# cube2equirect

./: meson.build
include/: glad.c  glad.h
src/: cube2equirect.cpp  cube2equirect.h  main.cpp
